--- a/manifest.yml
+++ b/manifest.yml
@@ -1,4 +1,4 @@
 --- !map:Jax::Plugin::Manifest 
 name: blender_models
-description: ""
+description: "a Jax plugin adding support for models built in Blender. Includes model importers and exporters for Blender."
 version: 0.0.1
